Added timer + function to periodically reduce memory usage
git-svn-id: http://openpandora.googlecode.com/svn/trunk@4 70b53d4a-4b22-0410-8d0b-dd6e4e9d4ecd

--- a/OpenPandora/OpenPandora.csproj
+++ b/OpenPandora/OpenPandora.csproj
@@ -263,6 +263,11 @@
                     BuildAction = "Content"
                 />
                 <File
+                    RelPath = "Win32\Kernel32.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Win32\NotifyIconBaloon.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
