readded the aplication icon
git-svn-id: http://openpandora.googlecode.com/svn/trunk@5 70b53d4a-4b22-0410-8d0b-dd6e4e9d4ecd

--- a/OpenPandora/OpenPandora.csproj
+++ b/OpenPandora/OpenPandora.csproj
@@ -7,7 +7,7 @@
     >
         <Build>
             <Settings
-                ApplicationIcon = ""
+                ApplicationIcon = "Bitmap\Pandora.ico"
                 AssemblyKeyContainerName = ""
                 AssemblyName = "OpenPandora"
                 AssemblyOriginatorKeyFile = ""
