--- a/OpenPandora/OpenPandora.csproj
+++ b/OpenPandora/OpenPandora.csproj
@@ -152,6 +152,16 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "BaseForm.cs"
+                    SubType = "Form"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "BaseForm.resx"
+                    DependentUpon = "BaseForm.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Configuration.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
