added shadow, new notifyicon and memory purge
git-svn-id: http://openpandora.googlecode.com/svn/trunk@11 70b53d4a-4b22-0410-8d0b-dd6e4e9d4ecd

--- a/OpenPandora/OpenPandora.csproj
+++ b/OpenPandora/OpenPandora.csproj
@@ -265,6 +265,30 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "NotifyIcon\NotifyIcon.cs"
+                    SubType = "Component"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "NotifyIcon\NotifyIcon.resx"
+                    DependentUpon = "NotifyIcon.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
+                    RelPath = "NotifyIcon\OpenPandora.Windows.Forms.NotifyIcon.bmp"
+                    BuildAction = "Content"
+                />
+                <File
+                    RelPath = "NotifyIcon\PerfTimer.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "NotifyIcon\Win32.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Setup\OpenPandora.nsi"
                     BuildAction = "None"
                 />
