1. Fixed problem with tray tooltip 2. Fixed problem wiht non XP 3. Fixed problem with showing some windows with Alt+Tab 4. More fixes
git-svn-id: http://openpandora.googlecode.com/svn/trunk@72 70b53d4a-4b22-0410-8d0b-dd6e4e9d4ecd

--- a/OpenPandora/OpenPandora.csproj
+++ b/OpenPandora/OpenPandora.csproj
@@ -210,6 +210,16 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "SettingsForm.cs"
+                    SubType = "Form"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "SettingsForm.resx"
+                    DependentUpon = "SettingsForm.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "SettingsView.cs"
                     SubType = "UserControl"
                     BuildAction = "Compile"
