--- a/OpenPandora/OpenPandora.csproj
+++ b/OpenPandora/OpenPandora.csproj
@@ -1,7 +1,7 @@
 <VisualStudioProject>
     <CSHARP
         ProjectType = "Local"
-        ProductVersion = "7.10.3077"
+        ProductVersion = "7.10.6030"
         SchemaVersion = "2.0"
         ProjectGuid = "{EAB35716-AC4E-409E-A54B-D5B2655F0147}"
     >
@@ -122,6 +122,11 @@
                     Name = "System.Web"
                     AssemblyName = "System.Web"
                     HintPath = "..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Web.dll"
+                />
+                <Reference
+                    Name = "lgLCDNETWrapper"
+                    AssemblyName = "lgLCDNETWrapper"
+                    HintPath = "..\lgLcdClassLibrary\Debug\lgLCDNETWrapper.dll"
                 />
             </References>
         </Build>
@@ -288,6 +293,11 @@
                 <File
                     RelPath = "Bitmap\PandoraLoading.bmp"
                     BuildAction = "Content"
+                />
+                <File
+                    RelPath = "G15\G15.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
                 />
                 <File
                     RelPath = "Messenger\Messenger.cs"
